project/ssu_score/error/20200009/25_error.txt
/home/ingyu/LSP/project/ssu_score/STD_DIR/20200009/25.c: In function ‘main’:
/home/ingyu/LSP/project/ssu_score/STD_DIR/20200009/25.c:38:1: error: expected ‘;’ before ‘}’ token
 }
 ^
/home/ingyu/LSP/project/ssu_score/STD_DIR/20200009/25.c:38:1: error: expected declaration or statement at end of input
